# Inferno-Omnia

./: .gitignore  App.config  App.xaml  App.xaml.cs  CMakeLists.txt  Inferno Omnia.csproj  Inferno Omnia.sln  LICENSE  MainWindow.xaml  MainWindow.xaml.cs  ProgramLauncher.cs  README.md  api.json  version.json
.github/: FUNDING.yml
Controller/: AchievementPanel.xaml  AchievementPanel.xaml.cs  DownloadPanel.xaml  DownloadPanel.xaml.cs  Game.cs  InfernoChecker.cs  InputDialogWindow.xaml  InputDialogWindow.xaml.cs  Mod.cs  ModManifest.cs  ModPanel.xaml  ModPanel.xaml.cs  OneAnswerInputDialogWindow.xaml  OneAnswerInputDialogWindow.xaml.cs  ProfilePanel.xaml  ProfilePanel.xaml.cs  Rand.cs  SupportedGames.cs  WebDownloader.cs
Inferno Omnia/: App.xaml  App.xaml.cs  Inferno Omnia.csproj  MainWindow.xaml  MainWindow.xaml.cs
Inferno Omnia 2/: Inferno Omnia 2.csproj  MainWindow.xaml.cs
Inferno Omnia/Controller/: ModPanel.xaml  ModPanel.xaml.cs
Inferno Omnia/Mods/: Mod.cs
Inferno Omnia/Properties/: AssemblyInfo.cs  Resources.Designer.cs
InfernoMods/: FileAssociation.cs
MelonMods/: MelonHandler.cs
Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs  Settings.cs  Settings.settings
Utils/: Extensions.cs  Get.cs  ProcessHelpers.cs  RGBASource.cs  Settings.cs  Storage.cs
